--- a/resume.html
+++ b/resume.html
@@ -7,16 +7,19 @@
 </head>
 <body>
     <center>
-        <h1>KESHAVA KRISHNA</h1>
+        <h1 style="background-color: aqua;">KESHAVA KRISHNA</h1>
+    <div style="background-color: lightpink;">
     <b>Email: </b><a href="">keshavakrishna72@gmail.com</a>&nbsp;&nbsp;
      <b>Linkedin: </b><a href="">https://www.linkedin.com/in/andiraju-keshava-krishna-b6a005251/</a>
     </center>
+</div>
     <hr>
-
+<div style="background-color: lightgoldenrodyellow;">
     <h3>profile Summary</h3>
     <hr>
     <p>Enthusiastic and detail-oriented MCA graduate with a strong foundation in computer science and programming. Adept at developing and implementing software solutions, with a focus on problem-solving and efficiency. Possesses hands-on experience in various programming languages, including HTML, CSS, java script and Python.</p>
-    <br>
+</div>
+<div style="background-color: burlywood;">
     <h3>Education Details</h3>
     <hr>
     <table border="1" width="100%">
@@ -38,14 +41,16 @@
             <td>7.0</td>
             <td>2022</td>
         </tr>
-    </table>
+    </table></div>
+    <div style="background-color: chartreuse;">
     <h3>Academic Projects</h3>
     <hr>
     <b>Title:</b>Detecting Fake Profiles in Social Network Through Machine Learning And NLP
     <ul>
         <li>Developed a continuous learning framework for machine learning models using labeled datasets of real and fake accounts; enhanced detection accuracy by 75% through iterative training cycles and real-time updates.</li>
         <li>Created an automated system for flagging suspicious profile behavior that processed 1M+ interactions weekly; this system is now utilized by the customer service team to expedite account verification processes.</li>
-    </ul>
+    </ul></div>
+    <div style="background-color: cornflowerblue;">
     <h3>Skills</h3>
     <hr>
     <h4>Technical Skills</h4>
@@ -66,8 +71,11 @@
         <li>Leadership</li>
 
     </ul>
+</div>
+<div style="background-color: darkviolet;">
     <h3>Declaration</h3>
     <hr>
     <p>I hereby declare that all the information mentioned in my resume is true and correct to my knowledge and I take full responsibility for the accuracy of the particular mentioned.</p>
+</div>
 </body>
 </html>
